Z-index fixed

--- a/css/main.css
+++ b/css/main.css
@@ -903,6 +903,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 20;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
