--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 20;
 
   width: 100%;
   height: 100%;
